--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,22 @@
     font-style: normal;
 }
 
-body {
-    background-color: #201F1F;
+@font-face {
+    font-family: "Roboto";
+    src: url('../assets/fonts/Roboto/Roboto-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
+body {
+    font-family: 'Roboto';
+    background-color: #201F1F;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar {
+    display:none;
 }
 
 html, body {
@@ -91,7 +104,7 @@ html, body {
 
 .bg-image {
     width: 100%;
-    min-height: 80vh;
+    min-height: 75vh;
     position: relative;
 }
 
@@ -165,3 +178,19 @@ html, body {
 .fa-brands:hover {
     color:#E6A756;
 }
+
+.pageTitle::after{
+    content: "";
+    display: block;
+    width: 10%; /* Ajustez la largeur du trait selon vos préférences */
+    border-bottom: 5px solid #E6A756; /* Couleur et épaisseur du trait */
+    margin-top: 5px; /* Espace entre le h1 et le trait */
+}
+
+/* CONTACT */
+
+.site-heading .section-heading {
+    font-weight: 100;
+    line-height: 4rem;
+}
+
