--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,51 @@ h1, h3 {
     color: #e6a756!important;
 }
 
+.custom-select {
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 1.75rem 0.375rem 1.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #C9CACA;
+    vertical-align: middle;
+    background: #292A2B;
+    border: 1px solid #6c757d;
+    border-radius: 0.25rem;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-top-left-radius: 0.25rem !important;
+    border-bottom-left-radius: 0.25rem !important;
+}
+
+.categoryLabel {
+    background: #201F1F;
+    color: #E6A756;
+    font-weight: bold;
+    font-family: Raleway;
+    border:none;
+}
+
+.custom-select {
+    transition: background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.pagination .page-item.active .page-link,
+.pagination .page-link:hover {
+    background-color: #E6A756; 
+    border-color: #E6A756; 
+    color: #fff;
+}
+
+.pagination .page-link:hover {   
+    outline: 0 none;
+}
+
+.pagination a {
+    color: #6C757D; 
+}
+
 /* NAVBAR */
 
 #mainNav {
